--- a/menu/cibo/buffalo-chicken-wings.html
+++ b/menu/cibo/buffalo-chicken-wings.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Costine in Salsa BBQ</title>
-    <meta name="description" content="Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce."/>
+    <title>Beerstrot | Buffalo Chicken Wings</title>
+    <meta name="description" content="Alette di pollo in salsa piccante. Servite con verdure e salsa al gorgonzola. Da leccarsi le dita"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Costine in Salsa BBQ"/>
-    <meta name="twitter:description" content="Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce."/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
+    <meta name="twitter:title" content="Buffalo Chicken Wings"/>
+    <meta name="twitter:description" content="Alette di pollo in salsa piccante. Servite con verdure e salsa al gorgonzola. Da leccarsi le dita"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/buffalo-chicken-wings.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Costine in Salsa BBQ"/>
-    <meta property="og:description" content="Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce."/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
-    <link rel="canonical" href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html"/>
+    <meta property="og:title" content="Buffalo Chicken Wings"/>
+    <meta property="og:description" content="Alette di pollo in salsa piccante. Servite con verdure e salsa al gorgonzola. Da leccarsi le dita"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/buffalo-chicken-wings.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -52,24 +52,24 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg" alt="Costine in Salsa BBQ"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/buffalo-chicken-wings.jpg" alt="Buffalo Chicken Wings"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Costine in salsa BBQ</h1>
-                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
+                        <h1>Buffalo chicken wings</h1>
+                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 1 Maggio 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
                 </div>
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Succose e Dolci</h2>
-            <p>Otto costine con una sottile crosta di salsa BBQ. Succose e con un retrogusto leggermente dolce.</p>
+            <h2>Da leccarsi le dita</h2>
+            <p>Alette di pollo in salsa piccante. Servite con verdure e salsa al gorgonzola. Da leccarsi le dita</p>
             <h2>Con cosa assaggiarle</h2>
-            <p>Gustale assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>: una birra superba che pulisce la bocca dalla dolcezza della salsa BBQ e risalta il sapore della carne.</p>  
+            <p>Gustale assieme a una delle nostre birre artigianali.</p>  
         </div>
     </div>
 <!-- fine articolo -->
@@ -83,13 +83,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
