--- a/menu/cibo/buffalo-chicken-wings.html
+++ b/menu/cibo/buffalo-chicken-wings.html
@@ -67,7 +67,8 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Da leccarsi le dita</h2>
-            <p>Alette di pollo in salsa piccante. Servite con verdure e salsa al gorgonzola. Da leccarsi le dita</p>
+            <p>Alette di pollo in salsa piccante. </p>
+            <p>Servite con sedano e carote e salsa al gorgonzola.</p>
             <h2>Con cosa assaggiarle</h2>
             <p>Gustale assieme a una delle nostre birre artigianali.</p>  
         </div>
