--- a/menu/cibo/costine-in-salsa-bbq.html
+++ b/menu/cibo/costine-in-salsa-bbq.html
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Succose e Dolci</h2>
-            <p>Costine di maiale con lunga cottura a bassa temperatura. Finite alla griglia con una spennellata di salsa BBQ. Succose e con un retrogusto leggermente dolce.</p><p>Servite con patate fritte o arrosto non surgelate e insalata.</p>
+            <p>Costine di maiale con lunga cottura a bassa temperatura. Finite alla griglia con una spennellata di salsa BBQ. Succose e con un retrogusto leggermente dolce.</p><p>Servite con patate fritte o arrosto non surgelate.</p>
             <h2>Con cosa assaggiarle</h2>
             <p>Gustale assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>: una birra superba che pulisce la bocca dalla dolcezza della salsa BBQ e risalta il sapore della carne.</p>  
         </div>
