--- a/menu/cibo/birramisu.html
+++ b/menu/cibo/birramisu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Birramisu</title>
+    <title>Beerstrot | Birramisù</title>
     <meta name="description" content="Birramisù. Un tiramisù fatto in casa con un leggerissimo sentore di birra stout"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
