--- a/menu/cibo/cheescake.html
+++ b/menu/cibo/cheescake.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Birramisu</title>
-    <meta name="description" content="Birramisù. Un tiramisù fatto in casa con un leggerissimo sentore di birra stout"/>
+    <title>Beerstrot | Cheescake</title>
+    <meta name="description" content="Cheescake in stile New York. Ricca e intensa"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Birramisù"/>
-    <meta name="twitter:description" content="Birramisù. Un tiramisù fatto in casa con un leggerissimo sentore di birra stout"/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/birramisu.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/birramisu.html"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/cibo/birramisu.html"/>
+    <meta name="twitter:description" content="Cheescake in stile New York. Ricca e intensa"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/cheescake.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/cibo/cheescake.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Birramisù"/>
-    <meta property="og:description" content="Birramisù. Un tiramisù fatto in casa con un leggerissimo sentore di birra stout"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/birramisu.jpg"/>
-    <link rel="canonical" href="http://beerstrot.it/menu/cibo/birramisu.html"/>
+    <meta property="og:description" content="Cheescake in stile New York. Ricca e intensa"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/cibo/cheescake.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -52,13 +52,13 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/birramisu.jpg" alt="Birramisù"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/cheescake.jpg" alt="Birramisù"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Birramisù</h1>
+                        <h1>Cheescake</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 4 Giugno 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
@@ -83,13 +83,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/birramisu.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/cheescake.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/birramisu.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/cheescake.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/birramisu.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/cheescake.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
@@ -102,7 +102,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/cibo/birramisu" class="right">Birramisù &rarr;</a>
+                <a href="http://beerstrot.it/menu/cibo/birramisu.html" class="right">Birramisù &rarr;</a>
             </div>
         </div> 
     </div>
