--- a/menu/cibo/deciso.html
+++ b/menu/cibo/deciso.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Hamburger | Deciso</title>
-    <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Pancetta gorgonzola e pomodorini confit danno forte carattere a questo hamburger"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Hamburger Deciso"/>
-    <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Pancetta gorgonzola e pomodorini confit danno forte carattere a questo hamburger"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/deciso.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/deciso.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/deciso.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Deciso"/>
-    <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta property="og:description" content="1180 grammi di carne eccezionale, macinata come dio comanda. Pancetta gorgonzola e pomodorini confit danno forte carattere a questo hamburger"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/deciso.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/deciso.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -66,8 +66,8 @@
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Piccante e armonioso</h2>
-            <p>Deciso è un hamburger con salsa leggermente piccante, che si amalgama splendidamente con il formaggio cheddar e la pancetta. Un po' di rucola dona freschezza al tutto.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <h2>Deciso e senza comromessi</h2>
+            <p>180 grammi di carne eccezionale, macinata come dio comanda. Pancetta gorgonzola e pomodorini confit danno un forte carattere a questo hamburger.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>  
         </div>
