--- a/menu/cibo/cheescake.html
+++ b/menu/cibo/cheescake.html
@@ -66,8 +66,8 @@
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Morbido e cremoso</h2>
-            <p>Tiramisù alla birra stout, servito fresco in modo da gustare a fondo tutti i sapori del mascarpone e dei biscotti. Il retrogusto amaro dolce della birra stout rende il tutto sublime.</p>
+            <h2>Ricca e intensa</h2>
+            <p>Cheescake in perfetto stile New York. Non è leggera, ma l'acido dello yougurt si abbina perfettamente con la dolcezza del formaggio. La base croccante del biscotto assieme al formaggio creano un mix buonissimo.</p>
             <h2>Con cosa assaggiarla</h2>
             <p>Gustalo assieme a una delle nostre birre stout. Puoi scegliere fra oltre 8 birre: dalle belghe alle americane, passando dall'Irlanda e dalla Scozia.</p>  
         </div>
