--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -238,6 +238,18 @@
                 </div>
                 <article class="row">
                     <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Postato su facebook</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 7 Giugno 2015</h6>  
+                        <blockquote cite="">Un luogo rilassante, immerso nelle colline marchigiane, dove si mangiano burger buoni e si beve birra artigianale buona, super consigliato ;-) accoglienza e servizio come si deve.<cite>Ilaria Barbotti</cite></blockquote>
+                        <a href="https://www.facebook.com/cavecchiabeerstrot/reviews" target="_blank">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>“Bella location”</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 7 Giugno 2015</h6>  
+                        <blockquote cite="">Sinceramente mi aspettavo di più dopo aver letto le recensioni e dopo aver visitato il sito del locale.<br>Il burguer è nella media e la presentazione del piatto scarsa. Sicuramente non sono all'altezza di quelli che adesso puoi mangiare in posti simili a Milano.<br>Hanno una buona selezione di birre italiane ed estere.<br>C'è da dire però che la location è fantastica con una bella vista sul paesotto medioevale. <cite>mario m</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r278455588-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Beerstrot... vale la pena addentrarsi nelle colline per provarlo!</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 2 Giugno 2015</h6>  
                         <blockquote cite="">Un posto per cui vale la pena addentrarsi nelle colline marchigiane. Un luogo da gustare, in tutti i suoi aspetti: panorama mozzafiato, da vivere in totale relax, esperienza gastronomica davvero originale, cortesia e simpatia degli osti! Tutto davvero ottimo!<br>Da provare e ripetere!!<cite>Giulia Caramaschi</cite></blockquote>
