--- a/menu/cibo/cheescake.html
+++ b/menu/cibo/cheescake.html
@@ -10,13 +10,13 @@
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Birramisù"/>
+    <meta name="twitter:title" content="Cheescake"/>
     <meta name="twitter:description" content="Cheescake in stile New York. Ricca e intensa"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/cheescake.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/cheescake.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Birramisù"/>
+    <meta property="og:title" content="Cheescake"/>
     <meta property="og:description" content="Cheescake in stile New York. Ricca e intensa"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/cheescake.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/cheescake.html"/>
@@ -52,7 +52,7 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/cheescake.jpg" alt="Birramisù"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/cheescake.jpg" alt="Cheescake"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
@@ -102,7 +102,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/cibo/birramisu.html" class="right">Birramisù &rarr;</a>
+                <a href="http://beerstrot.it/menu/cibo/birramisu.html" class="right">Cheescake &rarr;</a>
             </div>
         </div> 
     </div>
