--- a/menu/index.html
+++ b/menu/index.html
@@ -208,7 +208,7 @@
                         <h2 class="subheader">Birre artigianali alla Spina</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/tropicale.html">TropicAle<span class="right"> 4 | 6</span></a></h3>
+                                <h3>TropicAle<span class="right"> 4 | 6</span></h3>
                                 <p>Birrificio Emiliano. Ambrata e amara</p>
                             </li>
                             <li>
@@ -220,7 +220,7 @@
                                 <p>Birrificio MC77. Ambrata e amarissima</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Birra del mese<span class="right"> 4 | 6</span></a></h3>
+                                <h3>Birra del mese<span class="right"> 4 | 6</span></h3>
                                 <p>Questa birra cambia spesso</p>
                             </li>
                         </ul>
