--- a/menu/birra/breaking-hops-double-ipa.html
+++ b/menu/birra/breaking-hops-double-ipa.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Birrificio MC-77 | Breaking Hops Double IPA</title>
+    <title>Beerstrot | Birrificio MC-77 | Birra Breaking Hops Double IPA</title>
     <meta name="description" content="Birra ambrata, in stile double IPA. Ca' Vecchia Beerstrot offre questa grande birra artigianale alla spina."/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
