--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -239,6 +239,12 @@
                 <article class="row">
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Postato su facebook</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 8 Giugno 2015</h6>  
+                        <blockquote cite="">Io sono praticamente di "casa" abitando a non più di 50 metri di distanza.<br>Garantisco che atmosfera e location sono fantastici sopratutto al tramonto, accompagnato da un ottima Black consigliata dallo splendido e preparato staff.<br>Ringrazio la ragazza che ci ha coccolato in questo viaggio di sapori e profumi sia per la cordialità sia per averci mostrato le sue doti atletiche da centometrista sfoggiate tra una portata e l'altra ‪#‎tonica‬Giulia <br>Grazie mille torniamo presto!.<cite>Marco Palpacelli</cite></blockquote>
+                        <a href="https://www.facebook.com/cavecchiabeerstrot/posts/447722872054571" target="_blank">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Postato su facebook</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 7 Giugno 2015</h6>  
                         <blockquote cite="">Un luogo rilassante, immerso nelle colline marchigiane, dove si mangiano burger buoni e si beve birra artigianale buona, super consigliato ;-) accoglienza e servizio come si deve.<cite>Ilaria Barbotti</cite></blockquote>
                         <a href="https://www.facebook.com/cavecchiabeerstrot/reviews" target="_blank">Leggi l'originale</a>
