--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -244,6 +244,14 @@
                         <a href="https://www.facebook.com/cavecchiabeerstrot/posts/447722872054571" target="_blank">Leggi l'originale</a>
                     </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Panorama, cibo (anche per vegetariani) e staff favolosi</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 7 Giugno 2015</h6>  
+                        <blockquote cite="">Sono stata sabato sera a cena in questo nuovo locale. La location è splendida: alle 7 il tramonto regala dei colori sulla valle che neanche ci si può immaginare. L'ambiente è perfetto, con quei tavoli rustici e quella natura intorno. Il cibo è ottimo: gli hamburger sono di qualità superiore, si sente che c'è una grande cura e attenzione alla materia prima. C'è anche una interessante opzione vegetariana per l'hamburger che proverò probabilmente. Una selezione di birre veramente vasta. Vi consiglio anche la New York Cheesecake tra i dolci, che ho veramente apprezzato essendo una amante della vera cheesecake.<br>Possibilità di mangiare fuori ma anche dentro - ovviamente consiglio in queste serate di stare all'aperto ma anche il locale dentro è davvero bellissimo, con uno stile un po' urban veramente azzeccato.<br>Abbiamo avuto il piacere di intrattenerci a lungo dopo cena insieme ai gestori e proprietari del locale - veramente persone squisite. Gentilissimi durante la cena, disponibilissimi per quattro chiacchiere a fine pasto. Portano dagli Stati Uniti una ventata di aria fresca in una zona che, ahimè, è un po' troppo uguale a se stessa nei menù e nelle iniziative.<br>Tornerò spesso.<cite>Claudia G</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r278452146-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
+                    </div>
+
+
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Postato su facebook</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 7 Giugno 2015</h6>  
                         <blockquote cite="">Un luogo rilassante, immerso nelle colline marchigiane, dove si mangiano burger buoni e si beve birra artigianale buona, super consigliato ;-) accoglienza e servizio come si deve.<cite>Ilaria Barbotti</cite></blockquote>
