--- a/menu/cibo/cecilia.html
+++ b/menu/cibo/cecilia.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Hamburger | Cecilia</title>
-    <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta name="description" content="amburger di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Hamburger Cecilia"/>
-    <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta name="twitter:description" content="amburger di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/cecilia.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/cecilia.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/cecilia.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Cecilia"/>
-    <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta property="og:description" content="amburger di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/cecilia.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/cecilia.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Vegetariano</h2>
-            <p>Cecilia è un hamburger di ceci e avocaso, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo.</p>
+            <p>Cecilia è un hamburger di ceci e avocado, arricchito con una composta leggermente piccante di verdura e menta. L'aggiunto della rucola rende il buonissimo.</p>
             <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>  
         </div>
