--- a/menu/index.html
+++ b/menu/index.html
@@ -159,7 +159,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
-                                <p>Alette di pollo in salsa buffalo servite con crema di gorgonzola e verdure</p>
+                                <p>Alette di pollo in salsa buffalo leggermente  piccante, servite con crema di gorgonzola e verdure</p>
                             </li>
                         </ul>                      
                     </div>
