--- a/menu/cibo/deciso.html
+++ b/menu/cibo/deciso.html
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Deciso e senza compromessi</h2>
-            <p>180 grammi di carne eccezionale, macinata come dio comanda. Pancetta gorgonzola e pomodorini confit danno un forte carattere a questo hamburger.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <p>180 grammi di carne eccezionale, macinata come dio comanda. Pancetta, gorgonzola e pomodorini confit danno un forte carattere a questo hamburger.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>  
         </div>
