--- a/menu/cibo/lamb.html
+++ b/menu/cibo/lamb.html
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Delicato e succoso</h2>
-            <p>180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello. La rucola da quel tocco di amaro che bilancia il dolce della carne.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <p>180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello. La rucola da quel tocco di freschezza che bilancia il dolce della carne.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a una APA o una IPA di buon corpo e con finale amaro.</p>  
         </div>
