--- a/eventi/festa-estate-concerto-live.html
+++ b/eventi/festa-estate-concerto-live.html
@@ -2,13 +2,24 @@
 <!--[if IE 9]><html class="lt-ie10" lang="it" > <![endif]-->
 <html class="no-js" lang="it" data-useragent="Mozilla/5.0 (compatible; MSIE 10.0; Windows NT 6.2; Trident/6.0)">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Vivi l'Esperienza</title>
-    <meta name="description" content="Eventi di Beerstrot: dj set, rock, jazz, spettacoli di cabaret e tanto altro" />
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" />
-    <link rel="canonical" href="http://beerstrot.it/eventi/"/>
+    <title>Beerstrot | Concerti Live | Flora e Fauna</title>
+    <meta name="description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
+    <meta name="author" content="Andrea Tagliazucchi"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="@beerstrot"/>
+    <meta name="twitter:title" content="L'estate festeggiamola con i Flora e Fauna"/>
+    <meta name="twitter:description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/festa-estate-concerto-live.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/eventi/festa-estate-concerto-live.html"/>
+    <meta property="og:url" content="http://beerstrot.it/eventi/festa-estate-concerto-live.html"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="L'estate festeggiamola con i Flora e Fauna"/>
+    <meta property="og:description" content="Musica live a Ca' Vecchia Beerstrot con i Flora e Fauna"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/festa-estate-concerto-live.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/eventi/festa-estate-concerto-live.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -29,7 +40,7 @@
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/eventi/">Eventi</a></li>
+                <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a></li>
                 <li class="divider"></li>
@@ -40,59 +51,103 @@
         </section>
     </nav>
 <!-- fine navbar con hamburger -->
-<!-- inizio eventi -->
-    <header class="row">
-        <div class="medium-12 large-12 columns">
-            <h1>Eventi</h1>
-            <hr/>
-        </div>
-    </header>
+<!-- inizio articolo -->
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/festa-estate-concerto-live.jpg" alt="Flora e Fauna in Concerto" />
     <div class="row">
-        <div class="medium-12 large-12 columns">
-            <article class="row">  
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">21 Giu 2015</h3>
-                    <h5>Orario: dalle 20:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
-                </div>
-                <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/festa-estate-concerto-live-th.jpg" alt="Costine in Salsa BBQ"></a>
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>L'estate festeggiamola con i Flora e Fauna</h2>
-                    <p>Musica live a Ca' Vecchia Beerstrot. La band Flora e Fauna di Osimo ci allieterà con la loro musica Pop Rock.</strong>.</p>
-                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
-                </div>
+        <article>
+            <aside class="medium-5 large-4 columns">
+               <header>
+                    <div class="row">
+                        <div class="medium-12 large-12 columns">
+                            <h1>L'estate festeggiamola con i <strong>Flora e Fauna</strong></h1>
+                            <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a>
+                            <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a> e Flora e Fauna</h6>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="medium-12 large-12 columns">
+                            <div class="share-block">
+                                <h5 class="date" style="margin-top: 0.5em;">21 Giugno 2015</h5>
+                                <h5>Dalle 20:00</h5>
+                                <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i> Ca' Vecchia Beerstrot</a></h5>
+                            </div>
+                        </div>
+                    </div>
+                </header>
+            </aside>
+            <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
+                <h2>Musica live a Ca' Vecchia Beerstrot</h2>
+                <p>Per il ciclo: Musica Live.</p>
+                <p>Giancarlo e compagni allieteranno l'inizio dell'estate con musica rock e pop.</p>
+                <p>Ca' Vecchia Beerstrot e i Flora e Fauna vi aspettano il 21 Giugno dalle ore 20. Per una cena a suon di musica e un dopocena con grandi birre artigianali.</p>
+<!-- call to action inizio -->
                 <div class="row">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                        <hr>
+                    <div class="medium-12 large-12 columns">
+                        <a role="button" href="tel:+390718853384" class="button extra-space-button"><i class="fi-telephone"></i> Prenota</a>
                     </div>
                 </div>
-            </article>
-        </div>
-        <div class="medium-12 large-12 columns">
-            <article class="row">  
-                <div class="medium-3 large-3 columns">
-                    <h3 class="date extra-space-date-aside">30 Apr 2015</h3>
-                    <h5>Orario: 17:00-19:00</h5>
-                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+            </div>   
+<!-- call to action fine -->
+        </article>
+    </div>
+<!-- fine articolo -->
+<!-- inizio social sharing -->
+    <div class="row extra-space">
+        <aside class="medium-5 large-4 columns">
+            <h2>Condividi</h2>
+        </aside>
+        <div class="medium-7 large-8 columns">
+            <div class="row">
+                <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
+                    <ul class="block-grid-social-3">
+                        <li>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/eventi/festa-estate-concerto-live.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                        </li>
+                        <li>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/eventi/festa-estate-concerto-live.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                        </li>
+                        <li>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/eventi/festa-estate-concerto-live.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                        </li>
+                    </ul>
                 </div>
-                <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/costine-in-salsa-bbq-th.jpg" alt="Costine in Salsa BBQ"></a>
-                </div>
-                <div class="medium-6 large-6 columns">
-                    <h2>Un evento per tossici della birra, hamburger e non solo</h2>
-                    <p>Piccolo rinfresco con amici. Comincia ad assaporare il <strong>Gusto in Fermento</strong>.</p>
-                    <a href="http://beerstrot.it/eventi/apertura.html">Scopri l'evento &rarr;</a>
-                </div>
-                <div class="row hide-for-small">
-                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
-                    </div>
-                </div>
-            </article>
+            </div>
         </div>
     </div>
-<!-- fine tabbar eventi-->
+<!-- fine social sharing -->
+<!-- inizio navigazione nota: non ha extra space -->
+    <div class="row">
+        <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
+            <div class="clearfix">
+                <a href="http://beerstrot.it/eventi/" class="left">&larr; Lista eventi</a>
+                <!-- <a href="http://beerstrot.it/eventi/flamenco-e-birra.html" class="right">Flamenco e Birra &rarr; </a> -->
+            </div>
+        </div> 
+    </div>
+<!-- fine navigazione -->
+<!-- inizio commenti -->
+    <div class="row extra-space">
+        <aside class="medium-5 large-4 columns">
+            <h2>Commenta</h2>
+        </aside>
+        <div class="medium-7 large-8 columns extra-space-commenti">
+                <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+        var disqus_shortname = 'beerstrot'; // required: replace example with your forum shortname
+
+        /* * * DON'T EDIT BELOW THIS LINE * * */
+        (function() {
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = '//' + disqus_shortname + 'beerstrot.disqus.com/embed.js';
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    
+        </div>
+    </div>
+<!-- fine commenti --> 
 <!-- inizio footer -->
     <footer class="panel-prefooter extra-space-footer">
         <div class="row">
