--- a/eventi/index.html
+++ b/eventi/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>L'estate festeggiamola con i Flora e Fauna</h2>
-                    <p>Musica live a Ca' Vecchia Beerstrot. La band Flora e Fauna di Osimo ci allieterà con la loro musica Pop Rock.</strong>.</p>
+                    <p>Musica live a Ca' Vecchia Beerstrot. La band Flora e Fauna di Osimo ci allieterà con la loro musica Pop Rock.</p>
                     <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
