--- a/eventi/festa-estate-concerto-live.html
+++ b/eventi/festa-estate-concerto-live.html
@@ -79,7 +79,7 @@
                 <h2>Musica live a Ca' Vecchia Beerstrot</h2>
                 <p>Per il ciclo: Musica Live.</p>
                 <p>Giancarlo e compagni allieteranno l'inizio dell'estate con musica Rock e Pop.</p>
-                <p>Ca' Vecchia Beerstrot e i Flora e Fauna vi aspettano il 21 Giugno dalle ore 20 per una cena a suon di musica e un dopocena con grandi birre artigianali.</p>
+                <p>Ca' Vecchia Beerstrot e i Flora e Fauna vi aspettano il 21 Giugno dalle ore 20 per una cena a suon di musica, hamburger, costine, alette di pollo e grandi birre artigianali.</p>
 <!-- call to action inizio -->
                 <div class="row">
                     <div class="medium-12 large-12 columns">
