--- a/eventi/index.html
+++ b/eventi/index.html
@@ -56,7 +56,7 @@
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
                 </div>
                 <div class="medium-3 large-3 columns">
-                    <a href="http://beerstrot.it/eventi/apertura.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/festa-estate-concerto-live-th.jpg" alt="Costine in Salsa BBQ"></a>
+                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/festa-estate-concerto-live-th.jpg" alt="Flora e Fauna in Concerto"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>L'estate festeggiamola con i Flora e Fauna</h2>
