--- a/chi-siamo/team/giovanni-attilio.html
+++ b/chi-siamo/team/giovanni-attilio.html
@@ -43,15 +43,15 @@
 <!-- inizio header -->
     <header>
         <div id="image-background-team">
-            <img class="image-hero" src="http://beerstrot.it/asset/img/large/tapas.jpg" alt="birre stupende" />
+            <img class="image-hero" src="http://beerstrot.it/asset/img/large/lamb.jpg" alt="birre stupende" />
              <img class="user-image" src="http://beerstrot.it/asset/img/thumbs/giovanni-attilio-th.jpg" alt="Giovanni Attilio">
         </div>
         <div class="row">
             <div class="medium-10 large-9 columns extra-space">
                 <h1>Giovanni Attilio</h1>
-                <p class="by-line">Fondatore di Beerstrot e master brewer in charge</p>
+                <p class="by-line">Fondatore di Beerstrot e chef in charge</p>
                 <blockquote>
-                    <p>Scrivo di birra e mi piace berla di brutto. ma solo birra artigianale. <br>Tutte le foto sono fatte con un iphone 4s e raramente sono ritoccate con photoshop: mi piace far vedere le cose come sono.
+                    <p>Ho sempre avuto passione per la cucina. Sono di San Vittore di Cingoli e ho deciso di fare qualcosa nella mia terra dopo anni passati a New York e Bologna.<br><br>Perché ho scelto di tornare nelle Marche? La risposta è davvero semplice: materie prime eccezionali, panorami mozzafiato. I love It!
                     <cite>Giovanni</cite>
                     </p>
                 </blockquote>
