--- a/chi-siamo/team/giovanni-attilio.html
+++ b/chi-siamo/team/giovanni-attilio.html
@@ -51,7 +51,7 @@
                 <h1>Giovanni Attilio</h1>
                 <p class="by-line">Fondatore di Beerstrot e chef in charge</p>
                 <blockquote>
-                    <p>Ho sempre avuto passione per la cucina. Sono di San Vittore di Cingoli e ho deciso di fare qualcosa nella mia terra dopo anni passati a New York e Bologna.<br><br>Perché ho scelto di tornare nelle Marche? La risposta è davvero semplice: materie prime eccezionali, panorami mozzafiato. I love It!
+                    <p>Ho sempre avuto passione per la cucina. Sono di San Vittore di Cingoli e ho deciso di fare qualcosa nella mia terra dopo anni passati a Bologna e New York.<br>Perché ho scelto di tornare nelle Marche? La risposta è davvero semplice: materie prime eccezionali, panorami mozzafiato. I love It!
                     <cite>Giovanni</cite>
                     </p>
                 </blockquote>
