--- a/contatti/presskit/index.html
+++ b/contatti/presskit/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Scarica il Press-Kit"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
-    <link rel="canonical" href="http://beerstrot.it/contatti/press-kit/"/>
+    <link rel="canonical" href="http://beerstrot.it/contatti/presskit/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -50,7 +50,7 @@
             <div class="medium-6 large-6 columns">
                 <h2>Scarica il Press-Kit</h2>
                     <p>Ti abbiamo inviato una email. Conferma l'iscrizione se vuoi ricevere aggiornamenti su Ca' Vecchia Beerstrot. Nel frattempo scarica il press kit.</p>
-                    <a role="button" href="http://beerstrot.it/asset/file/150330_beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
+                    <a role="button" href="http://beerstrot.it//contatti/presskit/150621_beerstrot-press-kit.pdf" download="Press Kit.pdf" target="_blank" class="button extra-space-button">Scarica il Press Kit</a>
                     <p><small>Se non riesci a scaricare il file clicca col pulsante destro del mouse sul bottone rosso e seleziona <em>Scarica il file</em></small></p>
             </div>
             <div class="medium-6 large-6 columns">
