--- a/chi-siamo/team/giovanni-attilio.html
+++ b/chi-siamo/team/giovanni-attilio.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Fondatore di Beerstrot e brewer master in charge"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/chi-siamo/team/giovanni-attilio.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
