--- a/eventi/apertura.html
+++ b/eventi/apertura.html
@@ -19,6 +19,7 @@
     <meta property="og:title" content="Apertura col Botto"/>
     <meta property="og:description" content="Apriamo le danze con un grande spettacolo. Birre artigianali e hamburger come se piovesse."/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/costine-in-salsa-bbq.jpg"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/apertura.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
