--- a/menu/cibo/lamb.html
+++ b/menu/cibo/lamb.html
@@ -19,6 +19,7 @@
     <meta property="og:title" content="Hamburger Lamb"/>
     <meta property="og:description" content="180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/lamb.jpg"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/lamb.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
