--- a/video.html
+++ b/video.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Pagina non trovata</title>
-    <meta name="description" content="Uuupsssss" />
-    <meta name="author" content="Ca' Vecchia Beerstrot" />
-    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015" /> 
+    <meta name="description" content="Uuupsssss"/>
+    <meta name="author" content="Ca' Vecchia Beerstrot"/>
+    <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png"> 
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
 </head>
 <body>
