--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Una filosofia semplice: prodotti di gran qualità per offrire Birre artigianali e Hamburger strepitosi in un locale bellissimo. Pub, Birreria o Birstrot? Decidi tu."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/chi-siamo/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
