--- a/contatti/presskit/index.html
+++ b/contatti/presskit/index.html
@@ -10,6 +10,7 @@
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <link rel="canonical" href="http://beerstrot.it/contatti/presskit/"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
