--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property="og:title" content="Birra Artigianale e Cibo Divino"/>
     <meta property="og:description" content="Birreria, Pub, Beerstrot? Birra artigianale e cibo di qualità. Utilizziamo prodotti freschi. Facciamo gli hamburger più buoni al mondo con carni di prima scelta."/>
     <meta property="og:image" content="http://beerstrot.it//asset/img/large/background-home.jpg"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
