--- a/menu/cibo/estivo.html
+++ b/menu/cibo/estivo.html
@@ -19,6 +19,7 @@
     <meta property="og:title" content="Hamburger Estivo"/>
     <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Fresco e con carattere"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/estivo.jpg"/>
+    <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/estivo.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
