--- a/menu/index.html
+++ b/menu/index.html
@@ -168,12 +168,12 @@
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Cheescake<span class="right">5</span></a></h3>
-                                <p>Cheescake stile New York, con gelatina alla birra IPA.</p>
+                                <h3><!-- <a href="http://beerstrot.it/menu/cibo/cheescake.html"> -->Mousse al Cioccolato<span class="right">5</span><!-- </a> --></h3>
+                                <p>Morbida mousse al cioccolato con o senza peperoncino</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/birramisu.html">Birramisù<span class="right">5,5</span></a></h3>
-                                <p>Tiramisù alla birra stout</p>
+                                <h3><!-- <a href="http://beerstrot.it/menu/cibo/birramisu.html"> -->Panna Cotta<span class="right">5</span><!-- </a> --></h3>
+                                <p>Classica panna cotta servita con sciroppo d'acero</p>
                             </li>
                         </ul>
                     </div>
@@ -189,8 +189,8 @@
                                 <p>100 grammi di manzo, cheddar</p>
                             </li>
                             <li>
-                                <h3>Pasta<span class="right">5</span></h3>
-                                <p>Olio extra vergine d'oliva | burro | pomodoro</p>
+                                <h3>Bocconcini di pollo<span class="right">3,5</span></h3>    
+                                <p>Petto di pollo di prima scelta impanato e fritto</p>
                             </li>
                         </ul>
                     </div>
